examples/test/testpolicy6112.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6112
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key44: value11
      key3: value20
      key9: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value0
          key42: value30
      podSelector:
        matchLabels:
          key7: value4
          key20: value13
